--- a/index.html
+++ b/index.html
@@ -84,35 +84,37 @@
           <img class="w-100 buisnesmen-img" src="./images/buisnesmen-img.png" alt="img" />
         </div>
       </div>
-      <div class="statistic__box container position-absolute">
-        <div class="static__box__inner pb-5">
-          <h2 class="statistic__box__heading">STATISTIC</h2>
-          <div class="row">
-            <div class="col-xl-3 col-12 col-md-6 mt-md-5 mt-sm-5 mt-xl-0 mt-5">
-              <span class="project__delivery">
-                <strong class="project__delivery__number"> 300+ </strong>
-                <br />
-                Project Delivery
-              </span>
-            </div>
-            <div class="col-xl-3 col-12 col-md-6 mt-md-5 mt-sm-5 mt-xl-0 mt-5">
-              <span class="project__delivery">
-                <strong class="project__delivery__number"> 8 </strong> <br />
-                Years Experience
-              </span>
-            </div>
-            <div class="col-xl-3 col-12 col-md-6 mt-md-5 mt-sm-5 mt-xl-0 mt-5">
-              <span class="project__delivery">
-                <strong class="project__delivery__number"> 16 </strong> <br />
-                Awards
-              </span>
-            </div>
-            <div class="col-xl-3 col-12 col-md-6 mt-md-5 mt-sm-5 mt-xl-0 mt-5">
-              <span class="project__delivery">
-                <strong class="project__delivery__number"> 70+ </strong>
-                <br />
-                Happy Clients
-              </span>
+      <div class="container position-absolute">
+        <div class="statistic__box position-absolute w-96">
+          <div class="static__box__inner pb-5">
+            <h2 class="statistic__box__heading">STATISTIC</h2>
+            <div class="row">
+              <div class="collgl-3 col-12 col-md-6 mt-md-5 mt-sm-5 mt-xl-0 mt-5">
+                <span class="project__delivery">
+                  <strong class="project__delivery__number"> 300+ </strong>
+                  <br />
+                  Project Delivery
+                </span>
+              </div>
+              <div class="col-xl-3 col-12 col-md-6 mt-md-5 mt-sm-5 mt-xl-0 mt-5">
+                <span class="project__delivery">
+                  <strong class="project__delivery__number"> 8 </strong> <br />
+                  Years Experience
+                </span>
+              </div>
+              <div class="col-xl-3 col-12 col-md-6 mt-md-5 mt-sm-5 mt-xl-0 mt-5">
+                <span class="project__delivery">
+                  <strong class="project__delivery__number"> 16 </strong> <br />
+                  Awards
+                </span>
+              </div>
+              <div class="col-xl-3 col-12 col-md-6 mt-md-5 mt-sm-5 mt-xl-0 mt-5">
+                <span class="project__delivery">
+                  <strong class="project__delivery__number"> 70+ </strong>
+                  <br />
+                  Happy Clients
+                </span>
+              </div>
             </div>
           </div>
         </div>
@@ -268,7 +270,7 @@
               <div class="carousel-item-card d-md-flex">
                 <img src="./images/carousel.png" class="d-block w-100 w-md-50" alt="..." />
                 <div class="carousel-item-content w-100 w-md-50 pt-2 p-md-5">
-                  <h2 >
+                  <h2 class="bg__nav">
                     My Blog <br>
                     And New
                   </h2>
@@ -291,8 +293,7 @@
                   class="d-block w-100 w-md-50 object__fit__contain" alt="..." />
                 <div class="carousel-item-content w-100 w-md-50 pt-2 p-md-5">
                   <h2>
-                    <img height="auto"
-                    class="object__fit__contain height__36px" width="50px"
+                    <img height="auto" class="object__fit__contain height__36px" width="50px"
                       src="./images/qoshtirnoq.svg" alt="qoshtirnoq">
                   </h2>
                   <p class="text-white">
@@ -323,8 +324,124 @@
           </button>
         </div>
       </div>
+      <div class="container">
+        <h2 class="bg__nav">How This Agency Helped My <br>
+          Business And Career Journey?</h2>
+        <p class="text-black-50">A successful marketing plan relies heavily on the pulling-power of advertising <br>
+          copy. writing result-oriented ad copy is dificult, as it must appeal to, entice, <br>
+          and onviced consumers tp action.</p>
+        <button class="btn published">
+          PUBLISHED IN
+        </button>
+        <button class="btn published">
+          MARKEYING
+        </button>
+        <button class="btn published">
+          CATEGORY
+        </button>
+      </div>
     </section>
   </main>
+  <footer class="pt-5">
+    <div class="container">
+
+      <div class="row justify-content-between">
+        <div class="col-xl-3 col-md-6 col-12 d-flex justify-content-between">
+          <a class="navbar-brand fluid__inner bg__nav" href="index.html">
+            <img src="./images/logo-navbar-blue.svg" alt="...">
+            P.
+            <p class="pt-2">Lorem ipsum dolor sit amet, consectetur <br>
+              adipiscing elit. Lectus mattis nunc <br>
+              aliquam tincidunt est non.</p>
+            <div class="logos d-flex justify-content-between">
+              <img src="./images/facebook.svg" alt="...">
+              <img src="./images/instagram.svg" alt="...">
+              <img src="./images/twitter.svg" alt="...">
+              <img src="./images/in.svg" alt="...">
+            </div>
+          </a>
+        </div>
+        <div class="col-xl-3 col-lg-6 col-12">
+          <h4 class="bg__nav">Pages</h4>
+          <p class="text-black-50">
+            <a class="text-black-50 text-decoration-none" href="#">
+              Home
+            </a>
+          </p>
+          <p class="text-black-50">
+            <a class="text-black-50 text-decoration-none" href="#">
+              About
+            </a>
+          </p>
+          <p class="text-black-50">
+            <a class="text-black-50 text-decoration-none" href="#">
+              Service
+            </a>
+          </p>
+          <p class="text-black-50">
+            <a class="text-black-50 text-decoration-none" href="#">
+              Portfolio
+            </a>
+          </p>
+          <p class="text-black-50">
+            <a class="text-black-50 text-decoration-none" href="#">
+              Blog
+            </a>
+          </p>
+        </div>
+        <div class="col-xl-3 col-lg-6 col-12">
+          <h4 class="bg__nav">Services</h4>
+          <p class="text-black-50">
+            <a class="text-black-50 text-decoration-none" href="#">
+              Web Design
+            </a>
+          </p>
+          <p class="text-black-50">
+            <a class="text-black-50 text-decoration-none" href="#">
+              App Design
+            </a>
+          </p>
+          <p class="text-black-50">
+            <a class="text-black-50 text-decoration-none" href="#">
+              Dashboard
+            </a>
+          </p>
+          <p class="text-black-50">
+            <a class="text-black-50 text-decoration-none" href="#">
+              Illustration
+            </a>
+          </p>
+          <p class="text-black-50">
+            <a class="text-black-50 text-decoration-none" href="#">
+              Development
+            </a>
+          </p>
+        </div>
+        <div class="col-xl-3 col-lg-6 col-12">
+          <h4 class="bg__nav">Contact</h4>
+          <p>
+          <a class="text-decoration-none text-black-50" href="tel:+00 88 999 888 22">
+            click to tel
+          </a>            
+          </p>
+
+          <p><a href="#" class="text-black-50 text-decoration-none">
+            example@gmail.com
+          </a></p>
+          <p>
+            <a href="#" class="text-black-50 text-decoration-none">
+              www.portfolio.com
+            </a>
+          </p>
+          <p>
+            <a href="#" class="text-black-50 text-decoration-none">
+              44, Housing State, 3200 
+            </a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script>
