class name invalid changed

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="static__box__inner pb-5">
             <h2 class="statistic__box__heading">STATISTIC</h2>
             <div class="row">
-              <div class="collgl-3 col-12 col-md-6 mt-md-5 mt-sm-5 mt-xl-0 mt-5">
+              <div class="col-xl-3 col-12 col-md-6 mt-md-5 mt-sm-5 mt-xl-0 mt-5">
                 <span class="project__delivery">
                   <strong class="project__delivery__number"> 300+ </strong>
                   <br />
