--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   Project Delivery
                 </span>
               </div>
-              <div class="col-xl-3 col-12 col-md-6 mt-md-5 mt-sm-5 mt-xl-0 mt-5">
+              <div class="col-xl-3 col-12 col-md-6 mt-md-5 mt-sm-5 mt-xl-0 m  t-5">
                 <span class="project__delivery">
                   <strong class="project__delivery__number"> 8 </strong> <br />
                   Years Experience
@@ -266,6 +266,89 @@
       <div class="container carousel-container">
         <div id="carouselExampleControls" class="carousel slide" data-interval="10000">
           <div class="carousel-inner">
+            <div class="carousel-item carousel__item__2 active">
+              <div class="carousel-item-card d-md-flex">
+                <img height="auto" src="./images/buisnesmen-img__carousel.png"
+                  class="d-block w-100 w-md-50 object__fit__contain" alt="..." />
+                <div class="carousel-item-content w-100 w-md-50 pt-2 p-md-5">
+                  <h2>
+                    <img height="auto" class="object__fit__contain height__36px" width="50px"
+                      src="./images/qoshtirnoq.svg" alt="qoshtirnoq">
+                  </h2>
+                  <p class="text-white">
+                    Managed Services team acts like an extension <br> of yours to expertly <br>
+                    respond to any and all feedback, and scan and <br> evaluate reviews for <br>
+                    any legal concerns, profanity or slander, or <br> any policy violations of <br>
+                    <br>
+                    community and content. Services, analytics <br> rand reports can be <br>
+                    customized by location, project or initiative.
+                  </p>
+                  <p class="text-white-50">
+                    Mohammad Musa - CEO at Company
+                  </p>
+
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item ">
+              <div class="carousel-item-card d-md-flex">
+                <img src="./images/carousel.png" class="d-block w-100 w-md-50" alt="..." />
+                <div class="carousel-item-content w-100 w-md-50 pt-2 p-md-5">
+                  <h2 class="bg__nav">
+                    My Blog <br>
+                    And New
+                  </h2>
+                  <p>
+                    If It’s abillboard ad, you’ll need a super <br>
+                    catchy headline due to the speed at <br>
+                    which people will pass.
+                  </p>
+                  <div class="link__blog mt-5 d-inline-block">
+                    <a class="link__blog text-decoration-none text-white margin__top__txt__blog" href="#">
+                      Go To The Blog
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev border-0 text-white" type="button"
+            data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon-icons" aria-hidden="true">
+              <img width="50px" src="https://cdn-icons-png.flaticon.com/128/5166/5166419.png" alt="...">
+            </span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next border-0 text-white" type="button"
+            data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon-icons" aria-hidden="true">
+              <img width="50px" src="https://cdn-icons-png.flaticon.com/128/5166/5166431.png" alt="...">
+            </span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+      <div class="container">
+        <h2 class="bg__nav">How This Agency Helped My <br>
+          Business And Career Journey?</h2>
+        <p class="text-black-50">A successful marketing plan relies heavily on the pulling-power of advertising <br>
+          copy. writing result-oriented ad copy is dificult, as it must appeal to, entice, <br>
+          and onviced consumers tp action.</p>
+        <button class="btn published">
+          PUBLISHED IN
+        </button>
+        <button class="btn published">
+          MARKEYING
+        </button>
+        <button class="btn published">
+          CATEGORY
+        </button>
+      </div>
+    </section>
+    <section id="carousel" class="pt-5">
+      <div class="container carousel-container">
+        <div id="carouselExampleControls" class="carousel slide" data-interval="10000">
+          <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="carousel-item-card d-md-flex">
                 <img src="./images/carousel.png" class="d-block w-100 w-md-50" alt="..." />
@@ -420,14 +503,14 @@
         <div class="col-xl-3 col-lg-6 col-12">
           <h4 class="bg__nav">Contact</h4>
           <p>
-          <a class="text-decoration-none text-black-50" href="tel:+00 88 999 888 22">
-            click to tel
-          </a>            
+            <a class="text-decoration-none text-black-50" href="tel:+00 88 999 888 22">
+              click to tel
+            </a>
           </p>
 
           <p><a href="#" class="text-black-50 text-decoration-none">
-            example@gmail.com
-          </a></p>
+              example@gmail.com
+            </a></p>
           <p>
             <a href="#" class="text-black-50 text-decoration-none">
               www.portfolio.com
@@ -435,7 +518,7 @@
           </p>
           <p>
             <a href="#" class="text-black-50 text-decoration-none">
-              44, Housing State, 3200 
+              44, Housing State, 3200
             </a>
           </p>
         </div>
