--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <img class="w-100 buisnesmen-img" src="./images/buisnesmen-img.png" alt="img" />
         </div>
       </div>
-      <div class="container position-absolute">
+      <div class="container position-absolute d-flex justify-content-center">
         <div class="statistic__box position-absolute w-96">
           <div class="static__box__inner pb-5">
             <h2 class="statistic__box__heading">STATISTIC</h2>
@@ -96,7 +96,7 @@
                   Project Delivery
                 </span>
               </div>
-              <div class="col-xl-3 col-12 col-md-6 mt-md-5 mt-sm-5 mt-xl-0 m  t-5">
+              <div class="col-xl-3 col-12 col-md-6 mt-md-5 mt-sm-5 mt-xl-0 mt-5">
                 <span class="project__delivery">
                   <strong class="project__delivery__number"> 8 </strong> <br />
                   Years Experience
@@ -264,7 +264,7 @@
     </section>
     <section id="carousel" class="pt-5">
       <div class="container carousel-container">
-        <div id="carouselExampleControls" class="carousel slide" data-interval="10000">
+        <div id="carouselExampleControlss" class="carousel slide" data-interval="10000">
           <div class="carousel-inner">
             <div class="carousel-item carousel__item__2 active">
               <div class="carousel-item-card d-md-flex">
@@ -292,57 +292,38 @@
             </div>
             <div class="carousel-item ">
               <div class="carousel-item-card d-md-flex">
-                <img src="./images/carousel.png" class="d-block w-100 w-md-50" alt="..." />
+                <img src="./images/pexels-stephan-seeber-1261731.jpg" class="d-block w-100 w-md-50" alt="..." />
                 <div class="carousel-item-content w-100 w-md-50 pt-2 p-md-5">
-                  <h2 class="bg__nav">
-                    My Blog <br>
-                    And New
+                  <h2>
+                    <img height="auto" class="object__fit__contain height__36px" width="50px"
+                      src="./images/qoshtirnoq.svg" alt="qoshtirnoq">
                   </h2>
-                  <p>
-                    If It’s abillboard ad, you’ll need a super <br>
-                    catchy headline due to the speed at <br>
-                    which people will pass.
-                  </p>
-                  <div class="link__blog mt-5 d-inline-block">
-                    <a class="link__blog text-decoration-none text-white margin__top__txt__blog" href="#">
-                      Go To The Blog
-                    </a>
-                  </div>
+                  <p class="">
+                    Lorem ipsum dolor sit amet consectetur  <br>adipisicing elit. Aliquam ipsa mollitia  <br>provident suscipit
+                    hic aut assumenda voluptates, error non atque <br> quasi nam tempora neque reiciendis tempore at  <br>quo
+                    minima vel! <br>
+                    community and content. Services, analytics <br> rand reports can be <br>
+                    customized by location, project or initiative.
+                  </p>          
                 </div>
               </div>
             </div>
           </div>
           <button class="carousel-control-prev border-0 text-white" type="button"
-            data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            data-bs-target="#carouselExampleControlss" data-bs-slide="prev">
             <span class="carousel-control-prev-icon-icons" aria-hidden="true">
-              <img width="50px" src="https://cdn-icons-png.flaticon.com/128/5166/5166419.png" alt="...">
+              <img width="60px" src="https://cdn-icons-png.flaticon.com/128/5166/5166419.png" alt="...">
             </span>
             <span class="visually-hidden">Previous</span>
           </button>
           <button class="carousel-control-next border-0 text-white" type="button"
-            data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            data-bs-target="#carouselExampleControlss" data-bs-slide="next">
             <span class="carousel-control-next-icon-icons" aria-hidden="true">
-              <img width="50px" src="https://cdn-icons-png.flaticon.com/128/5166/5166431.png" alt="...">
+              <img width="60px" src="https://cdn-icons-png.flaticon.com/128/5166/5166431.png" alt="...">
             </span>
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-      </div>
-      <div class="container">
-        <h2 class="bg__nav">How This Agency Helped My <br>
-          Business And Career Journey?</h2>
-        <p class="text-black-50">A successful marketing plan relies heavily on the pulling-power of advertising <br>
-          copy. writing result-oriented ad copy is dificult, as it must appeal to, entice, <br>
-          and onviced consumers tp action.</p>
-        <button class="btn published">
-          PUBLISHED IN
-        </button>
-        <button class="btn published">
-          MARKEYING
-        </button>
-        <button class="btn published">
-          CATEGORY
-        </button>
       </div>
     </section>
     <section id="carousel" class="pt-5">
